chore: tambahkan catatan di resep ayam tangkap

--- a/ayam_tangkap.html
+++ b/ayam_tangkap.html
@@ -5,6 +5,7 @@
     <title>Resep Ayam Tangkap</title>
 </head>
 <body>
+    <!-- Catatan: Ditambahkan oleh Orang A -->
     <h1>Resep Ayam Tangkap</h1>
     <h2>Bahan-bahan:</h2>
     <ul>
