feat: ubah kuah pliek versi A

--- a/kuah_pliek.html
+++ b/kuah_pliek.html
@@ -3,6 +3,7 @@
 <head><meta charset="utf-8"><title>Kuah Pliek U</title></head>
 <body>
   <h1>Kuah Pliek U</h1>
+  <p>Versi konflik A</p>
 
   <h2>Bahan-bahan</h2>
   <ul>
